# ip_hom

./: CMakeLists.txt  README.md
cxxbind/: CMakeLists.txt
cxxbind/include/: exoMod1D_nlp.hpp  exodusFile.hpp  includes.hpp  model.hpp  utilities.hpp
cxxbind/src/: exoMod1D_nlp.cpp  exodusFile.cpp  main.cpp  model.cpp
example/: CMakeLists.txt
example/include/: hs071_nlp.hpp
example/src/: hs071_main.cpp  hs071_nlp.cpp
pybind/: plotModels.py
tests/good/: CMakeCache.txt  ipopt.out  solution_mu.txt  solution_theta.txt  start_mu.txt  start_theta.txt  true_mu.txt  true_theta.txt
